--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "croustibat/filament-jobs-monitor": "^2.6",
         "filament/filament": "^3.3",
         "laravel/framework": "^12.0",
+        "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.10.1",
         "mateffy/color": "^1.0",
         "openai-php/laravel": "^0.11.0",
